--- a/pengantar.tex
+++ b/pengantar.tex
@@ -30,6 +30,6 @@ Bagian-bagian yang sudah terlanjur ditulis dengan menggunakan versi 2,
 sedikit demi sedikit mulai diubah ke versi 3.
 
 
-Selamat menikmati versi 0.92\\
-Bandung, Mei 2022 \\
+Selamat menikmati versi 0.93\\
+Bandung, April 2024 \\
 Budi Rahardjo
