--- a/pengantar.tex
+++ b/pengantar.tex
@@ -27,9 +27,10 @@ Versi buku ini sudah menganjurkan untuk lebih condong ke Python versi 3
 karena pengembangan versi 2 sudah mulai dihentikan.
 [Catatan: buku mulai ditulis akhir 2017.]
 Bagian-bagian yang sudah terlanjur ditulis dengan menggunakan versi 2,
-sedikit demi sedikit mulai diubah ke versi 3.
+sedikit demi sedikit mulai diubah ke versi 3 dan hal-hal yang terkait
+dengan versi 2, mulai dihapuskan.
 
 
-Selamat menikmati versi 0.94\\
-Bandung, April 2024 \\
+Selamat menikmati versi 0.95\\
+Bandung, Oktober 2024 \\
 Budi Rahardjo
